--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yimi_big_screen",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A test project",
   "author": "eidjd",
   "license": "MIT",
@@ -11,7 +11,9 @@
   "main": "index.js",
   "dependencies": {
     "lodash": "^4.17.21",
-    "ttictactoe111": "1.0.0"
+    "ttictactoe111": "1.0.0",
+    "webp2topngs": "1.0.1"
+
 
   }
 }
